# KeyDB

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  Makefile  README.md  TLS.md  build.yaml  build_test.sh  ci.yaml  keydb.conf  make_rpm.mk  redis.conf  release.yaml  runtest  runtest-cluster  runtest-moduleapi  runtest-rotation  runtest-sentinel  sentinel.conf  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ccpp.yml  ci.yml  daily.yml  endurance.yml
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
docker-internal/: .gitignore  Dockerfile  GHE_PersonalAccessToken.txt  README.md  build-and-publish.sh
docker-internal/docker_PAT_build/: Dockerfile
examples/: Makefile.mk  autohbw_candidates.c  memkind_decorator_debug.c  pmem_alignment.c  pmem_malloc.c
fuzz/rdb/: dict.txt
fuzz/rdb/testcases/: empty.rdb  expire.rdb  expireonload.rdb  integer.rdb  integer_shared.rdb  multidb.rdb  replica.rdb  set.rdb  string.rdb
github-action-runner-docker/: Dockerfile  README.md  build-and-publish.sh  deployment.yaml
include/memkind/internal/: memkind_arena.h  tbb_mem_pool_policy.h
machamp_scripts/: Dockerfile  build.sh
monkey/: monkey.py
pkg/: README.md
pkg/deb/: README.md  changelog.Debian  deb-builder.sh  deb-buildsource.sh  master_changelog
pkg/deb/conf/: keydb.conf  sentinel.conf
pkg/deb/deb_files_generated/: .gitkeep
pkg/deb/debian/: control  copyright  keydb-benchmark.1  keydb-enterprise-sentinel.1  keydb-enterprise-sentinel.install  keydb-enterprise-server.manpages  keydb-enterprise-tools.install  keydb-pro-server.install  keydb-pro-tools.install  keydb-sentinel.install  keydb-sentinel.links  keydb-sentinel.manpages  keydb-server.1  keydb-server.install  keydb-server.links  keydb-tools.install  keydb-tools.postinst  rules  watch
pkg/deb/debian_dh9/: NEWS  changelog  control  copyright  files  gbp.conf  keydb-benchmark.1  keydb-check-aof.1  keydb-check-rdb.1  keydb-cli.1  keydb-enterprise-sentinel.logrotate  keydb-enterprise-sentinel.manpages  keydb-enterprise-server.postrm  keydb-pro-sentinel.postinst  keydb-pro-sentinel.postrm  keydb-pro-sentinel.prerm  keydb-pro-server.maintscript  keydb-pro-server.manpages  keydb-pro-server.postinst  keydb-pro-server.postrm  keydb-pro-server.prerm  keydb-pro-tools.examples  keydb-pro-tools.install  keydb-sentinel.default  keydb-sentinel.init  keydb-sentinel.install  keydb-sentinel.maintscript  keydb-sentinel.manpages  keydb-sentinel.postinst  keydb-sentinel.postrm  keydb-server.default  keydb-server.init  keydb-server.install  keydb-server.logrotate  keydb-server.manpages  keydb-server.postinst  keydb-server.postrm  keydb-tools.install  keydb-tools.manpages  keydb-tools.postrm  (+2 more)
pkg/docker/: Dockerfile  Dockerfile_Alpine  README.md
pkg/rpm/: README.md  generate_rpms.sh
src/: .gitignore  AsyncWorkQueue.cpp  AsyncWorkQueue.h  CMakeLists.txt  IStorage.h  Makefile  SnapshotPayloadParseState.cpp  SnapshotPayloadParseState.h  StorageCache.cpp  StorageCache.h  acl.c  acl.cpp  adlist.c  adlist.h  ae.c  ae.cpp  ae.h  ae_epoll.c  ae_epoll.cpp  ae_evport.c  ae_kqueue.c  ae_select.c  aelocker.h  anet.c  anet.h  aof.c  aof.cpp  asciilogo.h  bio.c  bio.cpp  bio.h  bitops.c  bitops.cpp  blocked.c  blocked.cpp  childinfo.cpp  cli_common.c  cli_common.h  cluster.c  cluster.cpp  (+167 more)
src/modules/: CMakeLists.txt  Makefile  helloload.c  hellotimer.c
src/modules/keydb_modstatsd/: Makefile  modmain.cpp
src/modules/keydb_modstatsd/cpp-statsd-client/: LICENSE.md
src/modules/keydb_modstatsd/cpp-statsd-client/.github/workflows/: linux.yml
src/modules/keydb_modstatsd/cpp-statsd-client/cmake/: Config.cmake.in
src/storage/: rocksdb.cpp  rocksdb.h  rocksdbfactor_internal.h  rocksdbfactory.cpp  rocksdbfactory.h  teststorageprovider.cpp  teststorageprovider.h
test/: TestPolicy.hpp  common.h  gb_page_tests_bind_policy.cpp  heap_manager_init_perf_test.cpp  locality_test.cpp  multithreaded_tests.cpp  pmem_allocator_tests.cpp  static_kinds_tests.cpp  tbbmalloc.h
test/allocator_perf_tool/: Allocator.hpp  GTestAdapter.hpp  MemkindAllocatorWithTimer.hpp  StandardAllocatorWithTimer.hpp  TaskFactory.hpp  main.cpp
test/performance/: framework.hpp  perf_tests.cpp
test/python_framework/: __init__.py
tests/: instances.tcl  test_helper.tcl
tests/assets/: default.conf  minimal.conf  redis-module-save.rdb  redis-save.rdb  user-namespaces.acl
tests/cluster/: run.tcl
tests/helpers/: bg_block_op.tcl  bg_complex_data.tcl  gen_climbing_load.tcl  gen_write_load.tcl
tests/integration/: aof-race.tcl  aof.tcl  failover.tcl  keydb-benchmark.tcl  keydb-cli.tcl  logging.tcl  multimaster-psync.tcl  psync2-reg-multimaster.tcl  psync2-reg.tcl  psync2.tcl  rdb-repl-tests  rdb.tcl  redis-cli.tcl  replication-2.tcl  replication-4.tcl  replication-active.tcl  replication-fast.tcl  replication-multimaster-connect.tcl  replication-multimaster.tcl  replication-psync-flash.tcl  replication-psync-multimaster.tcl  replication-psync.tcl  replication.tcl
tests/modules/: Makefile  blockonkeys.c  hooks.c  load.c  timers.c
tests/support/: benchmark.tcl  cli.tcl  keydb.tcl  server.tcl  test.tcl  util.tcl
tests/unit/: bitops.tcl  cron.tcl  dump.tcl  expire.tcl  flash.tcl  flash.tcl.save  introspection.tcl  lazyfree.tcl  loadsave.tcl  maxmemory.tcl  memefficiency.tcl  namespace.tcl  obuf-limits.tcl  oom-score-adj.tcl  other.tcl  pubsub.tcl  replication.tcl  rreplay.tcl  scan.tcl  scripting.tcl  shutdown.tcl  slowlog.tcl  soft_shutdown.tcl  tls-auditlog.tcl  tls-name-validation.tcl  tls-rotation.tcl  tls.tcl  wait.tcl
utils/: cluster_fail_time.tcl  compare_config.sh  gen-test-certs.sh  generate-command-help.rb  install_server.sh  keydb_init_script  keydb_init_script.tpl  redis-copy.rb  redis-sha1.rb  redis_init_script  speed-regression.tcl
utils/create-cluster/: README  create-cluster
utils/hashtable/: rehashing.c
utils/releasetools/: 01_create_tarball.sh  02_upload_tarball.sh  03_test_release.sh  04_release_hash.sh
(+77 files in other folders)
